# no_money_no_aws

./: .gitignore  README.md  app.py  mfa_only.json  pyproject.toml
lambda/: freetier_expiration_check.py
