[tool.poetry]
name = "no-money-no-aws"
version = "0.1.0"
description = "AWS 프리티어 알림 및 예산 관리 시스템"
authors = ["coodns mail@chaewoon.me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.0.0"
constructs = "^10.0.0"
boto3 = "^1.28.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
